Fixed json error

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
             "6fdigital\\SilverstripePhoneField\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev"
 
 }
