Enabled "live"- validation for the phone field, when using it with user-forms

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
         }
     },
     "extra": {
-        "installer-name": "silverstripe-phone-field"
+        "installer-name": "silverstripe-phone-field",
+        "expose": [
+            "client/dist/",
+            "client/lang/"
+        ]
     }
 }
